syntax = "proto3";

package buildbarn.configuration.bb_replicator;

import "pkg/proto/configuration/blobstore/blobstore.proto";
import "pkg/proto/configuration/global/global.proto";
import "pkg/proto/configuration/grpc/grpc.proto";

option go_package = "github.com/buildbarn/bb-storage/pkg/proto/configuration/bb_replicator";

message ApplicationConfiguration {
  // Was 'http_listen_address'. This option has been moved to
  // 'global.diagnostics_http_listen_address'.
  reserved 1;

  // gRPC servers to spawn to listen for requests from clients.
  repeated buildbarn.configuration.grpc.ServerConfiguration grpc_servers = 2;

  // Content Addressable Storage where data needs to be read.
  buildbarn.configuration.blobstore.BlobAccessConfiguration source = 3;

  // Content Addressable Storage where data needs to be written.
  buildbarn.configuration.blobstore.BlobAccessConfiguration sink = 4;

  // Configuration for replication.
  buildbarn.configuration.blobstore.BlobReplicatorConfiguration replicator = 5;

  // Maximum Protobuf message size to unmarshal.
  int64 maximum_message_size_bytes = 6;

  // Common configuration options that apply to all Buildbarn binaries.
  buildbarn.configuration.global.Configuration global = 7;

  // File systems to monitor.  This is ignored unless prometheus is enabled
  // in the global config.
  repeated string monitored_file_systems = 8;
}
